@@ -304,6 +304,7 @@ AC_ARG_ENABLE(modules,
     echo "WITH_MODULE($module)" >> $MODULE_DEFINES
     if test "x$module" = "xtrack" ; then
       TRACK="-D HAVE_TRACK"
+      AC_DEFINE(HAVE_TRACK, 1, [Define this if you are using mod-track])
     fi
   done
   IFS="$OIFS"
